--- a/conda_env.yaml
+++ b/conda_env.yaml
@@ -11,6 +11,7 @@ dependencies:
   - aiohappyeyeballs=2.4.3=pyhd8ed1ab_0
   - aiohttp=3.10.8=py312h66e93f0_0
   - aiosignal=1.3.1=pyhd8ed1ab_0
+  - alsa-lib=1.2.12=h4ab18f5_0
   - aom=3.9.1=hac33072_0
   - attrs=24.2.0=pyh71513ae_0
   - aws-c-auth=0.7.31=h57bd9a3_0
@@ -35,6 +36,8 @@ dependencies:
   - blas=2.116=mkl
   - blas-devel=3.9.0=16_linux64_mkl
   - blinker=1.8.2=pyhd8ed1ab_0
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
   - brotli-python=1.1.0=py312h2ec8cdc_2
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.33.1=heb4867d_0
@@ -45,6 +48,7 @@ dependencies:
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
   - colorama=0.4.6=pyhd8ed1ab_0
+  - contourpy=1.3.0=py312h68727a3_2
   - cuda-cudart=12.1.105=0
   - cuda-cupti=12.1.105=0
   - cuda-libraries=12.1.0=0
@@ -53,9 +57,12 @@ dependencies:
   - cuda-opencl=12.6.77=0
   - cuda-runtime=12.1.0=0
   - cuda-version=12.6=3
+  - cycler=0.12.1=pyhd8ed1ab_0
   - datasets=3.0.1=pyhd8ed1ab_0
   - dav1d=1.2.1=hd590300_0
+  - dbus=1.13.6=h5008d03_3
   - dill=0.3.8=pyhd8ed1ab_0
+  - double-conversion=3.3.0=h59595ed_0
   - expat=2.6.3=h5888daf_0
   - faiss=1.8.0=py312h64bddfc_1_cpu
   - faiss-cpu=1.8.0=h718b53a_1
@@ -69,6 +76,7 @@ dependencies:
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
+  - fonttools=4.54.1=py312h178313f_1
   - freetype=2.12.1=h267a509_2
   - fribidi=1.0.10=h36c2ea0_0
   - frozenlist=1.4.1=py312h66e93f0_1
@@ -92,6 +100,7 @@ dependencies:
   - jinja2=3.1.4=pyhd8ed1ab_0
   - joblib=1.4.2=pyhd8ed1ab_0
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.7=py312h68727a3_0
   - krb5=1.21.3=h659f571_0
   - lame=3.100=h166bdaf_1003
   - lcms2=2.16=hb7c19ff_0
@@ -108,10 +117,13 @@ dependencies:
   - libbrotlidec=1.1.0=hb9d3cd8_2
   - libbrotlienc=1.1.0=hb9d3cd8_2
   - libcblas=3.9.0=16_linux64_mkl
+  - libclang-cpp19.1=19.1.2=default_hb5137d0_1
+  - libclang13=19.1.2=default_h9c6a7e4_1
   - libcrc32c=1.1.2=h9c3ff4c_0
   - libcublas=12.1.0.26=0
   - libcufft=11.0.2.4=0
   - libcufile=1.11.1.6=0
+  - libcups=2.3.3=h4637d8d_4
   - libcurand=10.3.7.77=0
   - libcurl=8.10.1=hbbe4b11_0
   - libcusolver=11.4.4.55=0
@@ -143,11 +155,13 @@ dependencies:
   - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=16_linux64_mkl
   - liblapacke=3.9.0=16_linux64_mkl
+  - libllvm19=19.1.2=ha7bfdaf_0
   - libnghttp2=1.58.0=h47da74e_1
   - libnpp=12.0.2.50=0
   - libnsl=2.0.1=hd590300_0
   - libnvjitlink=12.1.105=0
   - libnvjpeg=12.1.1.14=0
+  - libopengl=1.7.0=ha4b6fd6_0
   - libopenvino=2024.4.0=hac27bb2_1
   - libopenvino-auto-batch-plugin=2024.4.0=h4d9b6c2_1
   - libopenvino-auto-plugin=2024.4.0=h4d9b6c2_1
@@ -165,6 +179,7 @@ dependencies:
   - libparquet=17.0.0=h6bd9018_19_cpu
   - libpciaccess=0.18=hd590300_0
   - libpng=1.6.44=hadc24fc_0
+  - libpq=16.4=h2d7952a_3
   - libprotobuf=5.27.5=h5b01275_2
   - libre2-11=2023.09.01=hbbce691_3
   - libsentencepiece=0.2.0=hc20e799_5
@@ -181,11 +196,15 @@ dependencies:
   - libwebp-base=1.4.0=hd590300_0
   - libxcb=1.16=hb9d3cd8_1
   - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.7.0=h2c5496b_1
   - libxml2=2.12.7=he7c6b58_4
+  - libxslt=1.1.39=h76b75d6_0
   - libzlib=1.3.1=hb9d3cd8_2
   - llvm-openmp=15.0.7=h0cdce71_0
   - lz4-c=1.9.4=hcb278e6_0
   - markupsafe=2.1.5=py312h66e93f0_1
+  - matplotlib=3.9.2=py312h7900ff3_1
+  - matplotlib-base=3.9.2=py312hd3ec401_1
   - mkl=2022.1.0=h84fe81f_915
   - mkl-devel=2022.1.0=ha770c72_916
   - mkl-include=2022.1.0=h84fe81f_915
@@ -194,6 +213,9 @@ dependencies:
   - mpmath=1.3.0=pyhd8ed1ab_0
   - multidict=6.1.0=py312h66e93f0_0
   - multiprocess=0.70.16=py312h66e93f0_1
+  - munkres=1.1.4=pyh9f0ad1d_0
+  - mysql-common=9.0.1=h266115a_2
+  - mysql-libs=9.0.1=he0572af_2
   - ncurses=6.5=he02047a_1
   - networkx=3.3=pyhd8ed1ab_1
   - ninja=1.12.1=h297d8ca_0
@@ -206,6 +228,7 @@ dependencies:
   - orc=2.0.2=h690cf93_1
   - packaging=24.1=pyhd8ed1ab_0
   - pandas=2.2.3=py312hf9745cd_1
+  - patsy=0.5.6=pyhd8ed1ab_0
   - pcre2=10.44=hba22ea6_2
   - pillow=10.4.0=py312h56024de_1
   - pip=24.2=pyh8b19718_1
@@ -217,6 +240,8 @@ dependencies:
   - pyarrow=17.0.0=py312h9cebb41_1
   - pyarrow-core=17.0.0=py312h9cafe31_1_cpu
   - pycparser=2.22=pyhd8ed1ab_0
+  - pyparsing=3.2.0=pyhd8ed1ab_1
+  - pyside6=6.7.2=py312h91f0f75_4
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.12.6=hc5c86c4_2_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
@@ -229,6 +254,8 @@ dependencies:
   - pytorch-mutex=1.0=cuda
   - pytz=2024.1=pyhd8ed1ab_0
   - pyyaml=6.0.2=py312h66e93f0_1
+  - qhull=2020.2=h434a139_5
+  - qt6-main=6.7.2=hadfd74e_5
   - re2=2023.09.01=h77b4e00_3
   - readline=8.2=h8228510_1
   - regex=2024.9.11=py312h66e93f0_0
@@ -237,7 +264,9 @@ dependencies:
   - s2n=1.5.3=h7b32b05_0
   - safetensors=0.4.5=py312h12e396e_0
   - scikit-learn=1.5.2=py312h7a48858_1
-  - scipy=1.14.1=py312h7d485d2_0
+  - scipy=1.14.1=py312h62794b6_1
+  - seaborn=0.13.2=hd8ed1ab_2
+  - seaborn-base=0.13.2=pyhd8ed1ab_2
   - sentence-transformers=3.0.1=pyhd8ed1ab_0
   - sentencepiece=0.2.0=h7900ff3_5
   - sentencepiece-python=0.2.0=py312h1742d2f_5
@@ -246,6 +275,7 @@ dependencies:
   - six=1.16.0=pyh6c4a22f_0
   - smmap=5.0.0=pyhd8ed1ab_0
   - snappy=1.2.1=ha2e4443_0
+  - statsmodels=0.14.4=py312hc0a28a1_0
   - svt-av1=2.2.1=h5888daf_0
   - sympy=1.13.3=pypyh2585a3b_103
   - tbb=2021.13.0=h84d6215_0
@@ -254,12 +284,14 @@ dependencies:
   - tokenizers=0.19.1=py312hfef1a59_0
   - torchaudio=2.3.1=py312_cu121
   - torchvision=0.18.1=py312_cu121
+  - tornado=6.4.1=py312h66e93f0_1
   - tqdm=4.66.5=pyhd8ed1ab_0
   - transformers=4.43.2=pyhd8ed1ab_0
   - typing-extensions=4.12.2=hd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
   - tzdata=2024a=h8827d51_1
   - ujson=5.10.0=py312h2ec8cdc_1
+  - unicodedata2=15.1.0=py312h66e93f0_1
   - urllib3=2.2.3=pyhd8ed1ab_0
   - wayland=1.23.1=h3e06ad9_0
   - wayland-protocols=1.37=hd8ed1ab_0
@@ -268,7 +300,15 @@ dependencies:
   - word2number=1.1=py_0
   - x264=1!164.3095=h166bdaf_2
   - x265=3.5=h924138e_3
+  - xcb-util=0.4.1=hb711507_2
+  - xcb-util-cursor=0.1.5=hb9d3cd8_0
+  - xcb-util-image=0.4.0=hb711507_2
+  - xcb-util-keysyms=0.4.1=hb711507_0
+  - xcb-util-renderutil=0.3.10=hb711507_0
+  - xcb-util-wm=0.4.2=hb711507_0
+  - xkeyboard-config=2.42=h4ab18f5_0
   - xorg-fixesproto=5.0=hb9d3cd8_1003
+  - xorg-inputproto=2.3.2=hb9d3cd8_1003
   - xorg-kbproto=1.0.7=hb9d3cd8_1003
   - xorg-libice=1.1.1=hb9d3cd8_1
   - xorg-libsm=1.2.4=he73a12e_1
@@ -277,7 +317,11 @@ dependencies:
   - xorg-libxdmcp=1.1.5=hb9d3cd8_0
   - xorg-libxext=1.3.4=h0b41bf4_2
   - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxi=1.7.10=h4bc722e_1
   - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-libxtst=1.2.5=h4bc722e_0
+  - xorg-libxxf86vm=1.1.5=hb9d3cd8_2
+  - xorg-recordproto=1.14.2=hb9d3cd8_1003
   - xorg-renderproto=0.11.1=hb9d3cd8_1003
   - xorg-xextproto=7.3.0=hb9d3cd8_1004
   - xorg-xproto=7.0.31=hb9d3cd8_1008
@@ -295,6 +339,7 @@ dependencies:
       - jsonschema==4.23.0
       - jsonschema-specifications==2024.10.1
       - mistral-common==1.4.4
+      - prettytable==3.11.0
       - pydantic==2.9.2
       - pydantic-core==2.23.4
       - referencing==0.35.1
@@ -302,4 +347,6 @@ dependencies:
       - scalable-vs==0.0.5
       - tiktoken==0.7.0
       - toml==0.10.2
+      - tomli==2.0.2
+      - wcwidth==0.2.13
 prefix: /home/vyvo/miniforge3/envs/rag-all
